--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
 <li>4 slices of cheese</li>
 
 <li>1 tbsp of butter</li>
+
 </ul>
 <ol>
 <li>2 slices of bread</li>
 <li>4 slices of cheese</li>
 <li>1 tbsp of butter</li>
+<ul>
+<li>2 slices of bread</li>
+<li>4 slices of cheese</li>
+
+<li>1 tbsp of butter</li>
+
+</ul>
 </ol>
 </body>
 </html>
